# gencode

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
architecture/: README.md
architecture/01-overview/: границы.md  карта-системы.md  пресс-релиз.md
architecture/02-core/: главный-цикл.md  память-и-состояние.md  права-доступа.md  характер.md
architecture/03-data/: schema.prisma  главный-кирпич.md  правила-нерушимые.md  сущности.md  схема-связей.md
architecture/04-flows/: путь-данных.md  триггеры.md
architecture/05-integrations/: README.md
architecture/06-stack/: технологии.md  что-не-выбрали.md
architecture/08-nonfunctional/: безопасность.md  расходы.md  риски-архитектуры.md
architecture/09-roadmap/: первая-фича.md  промт-для-завтра.md
cardgen/: config.py  requirements.txt
cardgen/bot/: handlers.py  keyboards.py  main.py  rate_limiter.py  storage.py
cardgen/engine/: generator.py  ozon_algorithm.py  url_fetcher.py  wb_algorithm.py
cardgen/templates/: categories.py  prompts.py
idea/: README.md
memory/: MEMORY.md  feedback_5_moves_after_feature.md  feedback_no_code_without_plan.md  feedback_no_env_read.md  feedback_no_hardcode.md  project_overview.md  reference_architecture.md
plans/: 2026-05-17-первая-фича.md  2026-05-18-верификация-mvp.md  2026-05-18-конкурентный-анализ.md  2026-05-18-копировать-всё.md  2026-05-18-фаза-2-критика.md  2026-05-18-фаза-2.md  README.md
retrospectives/: 2026-05-17_первая-фича.md  2026-05-18_верификация-mvp.md  TEMPLATE.md
tests/: test_url_fetcher.py
(+50 files in other folders)
